--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -289,9 +289,9 @@ a, a:hover {
 }
 .main-btn::after {
   position: absolute;
-  right: 15px;
+  /* right: 15px;
   top: 4px;
-  bottom: 4px;
+  bottom: 4px; */
   background-color: #14212b;
   -webkit-transition: all 0.3s ease-out 0s;
   transition: all 0.3s ease-out 0s;
